# fstd

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  cmake_uninstall.cmake.in  prior_suffix.json  pyproject.toml  search_config.json  setup.py
.github/workflows/: cmake-multi-platform.yml  main.yml  wheels.yml  windows-build.yml
fstd/: __init__.py  __init__.pyi
lib/include/: compress_dx.hpp  fstdx_searcher.hpp  fstdx_writer.hpp  fstlib.h  fstlib_wrapper.h  logger.hpp
lib/include/fstd/: common.h  compress_dx.hpp  fstdd_compressor.h  fstdd_reader.h  fstdd_writer.h  fstdx_compressor.h  fstdx_reader.h  fstdx_reader.hpp  fstdx_searcher.h  fstdx_searcher.hpp  fstdx_view.hpp  fstdx_writer.h  fstdx_writer.hpp  fstlib.h  fstlib_wrapper.h  hash_index.h  logger.h  thread_pool.h
lib/include/fstlib/: automaton.h  build_fst.h  byte_code.h  compile.h  decompile.h  map.h  matcher.h  matcher_utility.h  minimize.h  output_traits.h  set.h  state_transition.h  utility.h  writer.h
lib/src/: common.cpp  fstdd_compressor.cpp  fstdd_reader.cpp  fstdd_writer.cpp  fstdx_compressor.cpp  fstdx_reader.cpp  fstdx_searcher.cpp  fstdx_writer.cpp  fstlib_wrapper.cpp  logger.cpp
python/: CMakeLists.txt  fstd_pybind.cpp
src/: cli.h  fstd_cli.h  main.cpp
tests/: .gitignore  CMakeLists.txt  test_fstd.cpp
tests/dict/: dict.txt
